fix: Number of Results per Page - prevent wrapping
@21928608

--- a/public/css/wolfnet.less
+++ b/public/css/wolfnet.less
@@ -599,7 +599,7 @@
 
                     select {
                         margin-right: .25em;
-                        max-width: 3em;
+                        width: auto;
                     }
                 }
 
